package NYT.NAdmin.NProto;

import "yt_proto/yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqDie
{
    optional int32 exit_code = 1 [default = 42];
}

// This message is never actually sent as the process dies before replying.
message TRspDie
{ }

message TReqPingNode
{
    repeated string chain_addresses = 1;
    optional int32 multiplexing_band = 2; // EMultiplexingBand
}

message TRspPingNode
{
    repeated uint64 chain_latencies = 1;
}

message TReqWriteCoreDump
{ }

message TRspWriteCoreDump
{
    required string path = 1;
}

message TReqWriteLogBarrier
{
    required string category = 1;
}

message TRspWriteLogBarrier
{
    required NYT.NProto.TGuid barrier_id = 1;
}

////////////////////////////////////////////////////////////////////////////////
